- upgrade licence - update documentation site - improve changes for FrameTransform