@@ -3,13 +3,13 @@
  * Version 2.0, January 2004
  * http://www.apache.org/licenses/
  *
- * Copyright 2013 - 2021 Aurelian Tutuianu
+ * Copyright 2013 - 2022 Aurelian Tutuianu
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *  http://www.apache.org/licenses/LICENSE-2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -26,6 +26,7 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import rapaio.core.distributions.Distribution;
@@ -233,7 +234,7 @@ public class CForest extends ClassifierModel<CForest, ClassifierResult, RunInfo<
             range = range.parallel();
         }
         List<Pair<ClassifierModel<?, ?, ?>, Mapping>> list = range
-                .mapToObj(s -> buildWeakPredictor(df, weights)).toList();
+                .mapToObj(s -> buildWeakPredictor(df, weights)).collect(Collectors.toList());
         for (int i = 0; i < list.size(); i++) {
             Pair<ClassifierModel<?, ?, ?>, Mapping> weak = list.get(i);
             predictors.add(weak.v1);
